# oracle-cloud-provision-free-instance

./: .gitignore  README.md  config.example.toml  oracle_cloud_free_vm.pub  provision.py  pyproject.toml
.github/workflows/: provision.yml
